--- a/vue-admin-template/package.json
+++ b/vue-admin-template/package.json
@@ -23,10 +23,11 @@
     "element-ui": "2.13.2",
     "file-saver": "^2.0.2",
     "fuse.js": "^6.4.3",
+    "jquery": "^3.5.1",
     "js-cookie": "2.2.0",
+    "moment": "^2.15.2",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
-    "moment": "^2.15.2",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-apexcharts": "^1.6.0",
