--- a/vue-admin-template/package.json
+++ b/vue-admin-template/package.json
@@ -14,6 +14,8 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-buttons": "^18.3.47",
+    "@syncfusion/ej2-vue-notifications": "^18.3.47",
     "apexcharts": "^3.22.1",
     "axios": "0.18.1",
     "bootstrap-vue": "2.2.0",
@@ -29,6 +31,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "v-tooltip": "^2.0.3",
     "vue": "2.6.10",
     "vue-apexcharts": "^1.6.0",
     "vue-chartjs": "^3.5.1",
