--- a/vue-admin-template/package.json
+++ b/vue-admin-template/package.json
@@ -27,6 +27,7 @@
     "fuse.js": "^6.4.3",
     "jquery": "^3.5.1",
     "js-cookie": "2.2.0",
+    "leaflet": "^1.6.0",
     "moment": "^2.15.2",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
@@ -41,6 +42,7 @@
     "vue-multilanguage": "^4.0.10",
     "vue-router": "3.0.6",
     "vue-toast-notification": "^0.5.4",
+    "vue2-leaflet": "^2.5.2",
     "vuex": "3.1.0",
     "xlsx": "^0.16.8"
   },
