--- a/vue-admin-template/package.json
+++ b/vue-admin-template/package.json
@@ -38,10 +38,12 @@
     "vue-chartjs": "^3.5.1",
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.22.1",
+    "vue-loading-overlay": "^3.4.2",
     "vue-moment": "^4.1.0",
     "vue-multilanguage": "^4.0.10",
     "vue-router": "3.0.6",
     "vue-toast-notification": "^0.5.4",
+    "vue-ui-preloader": "^1.1.3",
     "vue2-leaflet": "^2.5.2",
     "vuex": "3.1.0",
     "xlsx": "^0.16.8"
