--- a/vue-admin-template/package.json
+++ b/vue-admin-template/package.json
@@ -39,6 +39,7 @@
     "vue-count-to": "^1.0.13",
     "vue-i18n": "^8.22.1",
     "vue-loading-overlay": "^3.4.2",
+    "vue-modal-dialogs": "^3.0.0",
     "vue-moment": "^4.1.0",
     "vue-multilanguage": "^4.0.10",
     "vue-router": "3.0.6",
