vlad completed profile

--- a/vue-admin-template/package.json
+++ b/vue-admin-template/package.json
@@ -37,7 +37,9 @@
     "vue-apexcharts": "^1.6.0",
     "vue-chartjs": "^3.5.1",
     "vue-count-to": "^1.0.13",
+    "vue-cropperjs": "^3.0.0",
     "vue-i18n": "^8.22.1",
+    "vue-image-upload-resize": "^2.0.4",
     "vue-loading-overlay": "^3.4.2",
     "vue-modal-dialogs": "^3.0.0",
     "vue-moment": "^4.1.0",
